fixed the light/dark mode

--- a/src/components/ThemeDropdown/styles.module.css
+++ b/src/components/ThemeDropdown/styles.module.css
@@ -1,27 +1,3 @@
-@reference 'tailwindcss';
-
-@custom-variant dark (&:where(.dark, .dark *));
-
-.themeDropdown__button {
-  @apply flex flex-row items-center justify-center text-xl font-semibold;
-  @apply rounded-xl p-1 pl-3;
-  @apply transition hover:cursor-pointer;
-  @apply hover:bg-stone-100 hover:text-blue-400;
-  @apply focus:bg-stone-100 focus:text-blue-400;
-  @apply dark:hover:bg-stone-900 dark:hover:text-blue-300;
-  @apply dark:focus:bg-stone-900 dark:focus:text-blue-300;
-  @apply outline-none;
-}
-
-.themeDropdown__item {
-  @apply flex flex-row justify-between gap-3 rounded-sm p-1 px-2 font-semibold transition;
-  @apply hover:cursor-pointer hover:bg-stone-100 hover:text-blue-400;
-  @apply focus:cursor-pointer focus:bg-stone-100 focus:text-blue-400;
-  @apply dark:hover:bg-stone-900 dark:hover:text-blue-300;
-  @apply dark:focus:bg-stone-900 dark:focus:text-blue-300;
-  @apply outline-none;
-}
-
-.themeDropdown__button__icon__rotate {
+#themeDropdown__button__icon__rotate {
   transform: rotate(90deg);
 }
